# HITResearch

./: README.md  pyproject.toml
configs/: default.yaml
docs/: HANDOVER_ARCHITECTURE_CN.md  POLARIZATION_MODEL.md  RUNNING.md
scripts/: debug_isaac_headless.py  demo_to_rviz_bag.py  inspect_isaac_setup.py  run_batch.py  visualize_dataset.py
src/hitresearch_sim/config/: loader.py  schema.py
src/hitresearch_sim/core/: geo.py  pipeline.py  random_manager.py
src/hitresearch_sim/dataset/: writer.py
src/hitresearch_sim/interfaces/: hooks.py
src/hitresearch_sim/polarization/: compositor.py  lut.py  sky_mask.py
src/hitresearch_sim/scenes/: forest_scene.py  procedural_forest.py  trajectory.py
src/hitresearch_sim/sensors/: imu.py  isaac_bridge.py  stereo.py  upward_camera.py
tests/: test_config_loader.py  test_demo_to_rviz_bag.py  test_forest_scene.py  test_inspect_script.py  test_isaac_bridge.py  test_mock_sensor_outputs.py  test_polarization_model.py  test_run_batch_script.py
